ci: grant write permissions to docs action

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,6 +5,8 @@ on:
     paths:
       - README.md
       - .github/workflows/docs.yml
+permissions:
+  contents: write
 jobs:
   docs:
     runs-on: ubuntu-latest
