ci: explicitely remove vimdoc field

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ jobs:
       - run: mkdir -p doc
       - uses: kdheepak/panvimdoc@main
         with:
+          vimdoc: ""
           version: "Neovim >= 0.10.0"
           toc: true
       - uses: stefanzweifel/git-auto-commit-action@v5
