--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
           vimdoc: ${{ github.event.repository.name }}
           version: "Neovim >= 0.10.0"
           toc: true
-          shift_heading_level_by: -1 # remove README.md first nurl.nvim header from tags
+          shiftheadinglevelby: -1 # remove README.md first nurl.nvim header from tags
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs: auto-generate vimdoc"
