--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,8 @@
 name: Generate docs
 on:
   push:
-    branches: [main]
+    branches:
+      - main
     paths:
       - README.md
       - .github/workflows/docs.yml
@@ -18,6 +19,7 @@ jobs:
           vimdoc: ${{ github.event.repository.name }}
           version: "Neovim >= 0.10.0"
           shiftheadinglevelby: -1 # remove README.md first nurl.nvim header from tags
+          toc: false
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs: auto-generate vimdoc"
